--- a/config.json
+++ b/config.json
@@ -1,15 +1,18 @@
 {
   "recentFiles": [
-    "~/Documents/GitPerso/nfradin.fr/Procfile",
-    "~/Documents/GitPerso/nfradin.fr/src/www/compile_templates.js",
-    "~/Documents/GitPerso/nfradin.fr/src/utils/EJSCompiler.js",
-    "~/Documents/GitPerso/nfradin.fr/src/db/article.js",
-    "~/Documents/GitPerso/nfradin.fr/src/db/category.js",
-    "~/Documents/GitPerso/nfradin.fr/src/db/models.js",
-    "~/Documents/GitPerso/nfradin.fr/src/db/user.js",
-    "~/Documents/GitPerso/nfradin.fr/src/routes/router.js"
+    "~/Documents/GitPerso/ArduIDE/a.txt",
+    "~/Documents/GitPerso/ArduIDE/css/undefined3.txt",
+    "~/Documents/GitPerso/ArduIDE/README.md",
+    "~/Documents/GitPerso/ArduIDE/test2.md",
+    "~/Documents/GitPerso/ArduIDE/undefined.txt",
+    "~/Documents/GitPerso/ArduIDE/test.txt",
+    "~/Documents/GitPerso/ArduIDE/undefined2.txt",
+    "~/Documents/GitPerso/nfradin.fr/Procfile"
   ],
   "recentDirs": [
+    "~/Documents/GitPerso/ArduinoHack",
+    "~/Documents/GitPerso/ArduIDE/css",
+    "~/Documents/GitPerso/ArduIDE",
     "~/Documents/GitPerso/nfradin.fr",
     "~/Documents/Projects/connected-lamp"
   ]
