--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "dependencies": {
     "underscore":"x",
     "mime": "1.2.11",
-    "chokidar": "0.7.0"
+    "chokidar": "0.7.0",
+    "serialport": "1.2.5"
+  },
+  "scripts":{
+    "install": "sh ./postinstall.sh"
   },
   "window": {
     "show": false,
-    "title": "Test",
     "toolbar": true,
     "frame": true,
     "position": "center",
