reduce serial ports polling time to 1sec

--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
   "recentFiles": [
+    "~/Documents/GitPerso/ArduIDE/js/ArduIDE.js",
+    "~/Documents/GitPerso/ArduIDE/css/reset.css",
     "~/Documents/GitPerso/ArduIDE/a.txt",
     "~/Documents/GitPerso/ArduIDE/css/undefined3.txt",
     "~/Documents/GitPerso/ArduIDE/README.md",
     "~/Documents/GitPerso/ArduIDE/test2.md",
     "~/Documents/GitPerso/ArduIDE/undefined.txt",
-    "~/Documents/GitPerso/ArduIDE/test.txt",
-    "~/Documents/GitPerso/ArduIDE/undefined2.txt",
-    "~/Documents/GitPerso/nfradin.fr/Procfile"
+    "~/Documents/GitPerso/ArduIDE/test.txt"
   ],
   "recentDirs": [
     "~/Documents/GitPerso/ArduinoHack",
